--- a/html/index.html
+++ b/html/index.html
@@ -110,19 +110,33 @@
   </header>
   <section class="main-wrapper">
     <div class="maindesc-wrapper">
+      <div class="maindesc-wrap">
+        <h2 class="desc-title"> Find Your <span>Perfect</span> Car </h2>
 
+        <div class="subject-wrapper">
+          <div class="subject sb1">All</div>
+          <div class="subject sb2">New</div>
+          <div class="subject sb3">Used</div>
+        </div>
+        <form class="form-wrapper">
+          <input type="text" placeholder="All Makes" readonly>
+          <input type="text" placeholder="All Models" readonly>
+          <input type="text" placeholder="Max Price">
+          <button class="bt-search"> <i class="fa fa-search"></i> </button>
+        </form>
+      </div>
     </div>
     <div class="slide-wrapper">
       <div class="swiper-container slide-wrap">
         <div class="swiper-wrapper slide-stage">
-          <div class="swiper-slide slide">
-            <img src="../img/slide/slide-1.jpg" alt="메인 슬라이드">
+          <div class="swiper-slide slide slide1">
+            <div class="img-wrap"></div>
           </div>
-          <div class="swiper-slide slide">
-            <img src="../img/slide/slide-2.jpg" alt="메인 슬라이드">
+          <div class="swiper-slide slide slide2">
+            <div class="img-wrap"></div>
           </div>
-          <div class="swiper-slide slide">
-            <img src="../img/slide/slide-3.jpg" alt="메인 슬라이드">
+          <div class="swiper-slide slide slide3">
+            <div class="img-wrap"></div>
           </div>
         </div>
       </div>
