handy-wrapper 만드는중

--- a/html/index.html
+++ b/html/index.html
@@ -112,34 +112,92 @@
     <div class="maindesc-wrapper">
       <div class="maindesc-wrap">
         <h2 class="desc-title"> Find Your <span>Perfect</span> Car </h2>
-
-        <div class="subject-wrapper">
-          <div class="subject sb1">All</div>
-          <div class="subject sb2">New</div>
-          <div class="subject sb3">Used</div>
-        </div>
+        <ul class="subject-wrapper">
+          <li class="subject sb1">All</li>
+          <li class="subject sb2">New</li>
+          <li class="subject sb3">Used</li>
+        </ul>
         <form class="form-wrapper">
           <input type="text" placeholder="All Makes" readonly>
           <input type="text" placeholder="All Models" readonly>
           <input type="text" placeholder="Max Price">
           <button class="bt-search"> <i class="fa fa-search"></i> </button>
+          <button class="bt-search2"> search <i class="fa fa-search"></i> </button>
         </form>
       </div>
     </div>
     <div class="slide-wrapper">
       <div class="swiper-container slide-wrap">
-        <div class="swiper-wrapper slide-stage">
-          <div class="swiper-slide slide slide1">
+        <ul class="swiper-wrapper slide-stage">
+          <li class="swiper-slide slide slide1">
             <div class="img-wrap"></div>
-          </div>
-          <div class="swiper-slide slide slide2">
+          </li>
+          <li class="swiper-slide slide slide2">
             <div class="img-wrap"></div>
-          </div>
-          <div class="swiper-slide slide slide3">
+          </li>
+          <li class="swiper-slide slide slide3">
             <div class="img-wrap"></div>
-          </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <section class="handy-wrapper">
+    <div class="wrapper">
+      <div class="top-wrapper">
+        <div class="title-wrap">
+          <h3 class="subtitle">Handy picked</h3>
+          <h2 class="title">Featured Listings</h2>
+        </div>
+        <div class="bt-wrapper">
+          <button class="bt-handy bt-new mr-2">New</button>
+          <button class="bt-handy bt-used">Used</button>
         </div>
       </div>
+      <ul class="list-wrapper">
+        <li class="list li1">
+          <div class="img-wrap">
+            <img src="../img/handy/handy1.webp" alt="차량이미지">
+          </div>
+          <div class="desc-wrap">
+            <div class="title">
+              <h4>BMW 8-serie 2-door coupe grey</h4>
+            </div>
+            <div class="article">
+              <div class="year">2021</div>
+              <div class="opt-wrap">
+                <div class="opt">Automatic</div>
+                <div class="opt">petrol</div>
+                <div class="opt">Front Wheel Drive</div>
+              </div>
+              <div class="price">$62,000</div>
+            </div>
+          </div>
+        </li>
+        <li class="list li2 smli">
+          <div class="img-wrap">
+            <img src="../img/handy/handy1.webp" alt="차량이미지">
+          </div>
+          <div class="desc-wrap">
+            <div class="title">
+              <h4>BMW 8-serie 2-door coupe grey</h4>
+            </div>
+            <div class="article">
+              <div class="year">2021</div>
+              <div class="opt-wrap">
+                <div class="opt">Automatic</div>
+                <div class="opt">petrol</div>
+                <div class="opt">Front Wheel Drive</div>
+              </div>
+              <div class="price">$62,000</div>
+            </div>
+          </div>
+        </li>
+        <li class="list li3 smli"></li>
+        <li class="list li4 smli"></li>
+        <li class="list li5 smli"></li>
+      </ul>
+      <div class="bot-wrapper"></div>
     </div>
   </section>
   <script src="../js/index.js"></script>
