--- a/html/index.html
+++ b/html/index.html
@@ -166,36 +166,88 @@
             <div class="article">
               <div class="year">2021</div>
               <div class="opt-wrap">
-                <div class="opt">Automatic</div>
-                <div class="opt">petrol</div>
-                <div class="opt">Front Wheel Drive</div>
+                <div class="opt opt1">Automatic</div>
+                <div class="opt opt2">petrol</div>
+                <div class="opt opt3">Front Wheel Drive</div>
               </div>
               <div class="price">$62,000</div>
             </div>
           </div>
         </li>
-        <li class="list li2 smli">
-          <div class="img-wrap">
-            <img src="../img/handy/handy1.webp" alt="차량이미지">
-          </div>
-          <div class="desc-wrap">
-            <div class="title">
-              <h4>BMW 8-serie 2-door coupe grey</h4>
+        <ul class="list-wrap">
+          <li class="list li2 smli">
+            <div class="img-wrap">
+              <img src="../img/handy/handy2.webp" alt="차량이미지">
             </div>
-            <div class="article">
-              <div class="year">2021</div>
-              <div class="opt-wrap">
-                <div class="opt">Automatic</div>
-                <div class="opt">petrol</div>
-                <div class="opt">Front Wheel Drive</div>
+            <div class="desc-wrap">
+              <div class="title">
+                <h4>Chevrolet Camaro 2-door convertible blue</h4>
+                <div class="price">$40,000</div>
               </div>
-              <div class="price">$62,000</div>
+              <div class="article">
+                <div class="year">2021</div>
+                <div class="opt-wrap">
+                  <div class="opt opt1">Convertible</div>
+                  <div class="opt opt2">Diesel</div>
+                </div>
+              </div>
             </div>
-          </div>
-        </li>
-        <li class="list li3 smli"></li>
-        <li class="list li4 smli"></li>
-        <li class="list li5 smli"></li>
+          </li>
+          <li class="list li3 smli">
+            <div class="img-wrap">
+              <img src="../img/handy/handy3.webp" alt="차량이미지">
+            </div>
+            <div class="desc-wrap">
+              <div class="title">
+                <h4>Ferrari LaFerrari 2-door coupe red</h4>
+                <div class="price">$810,000</div>
+              </div>
+              <div class="article">
+                <div class="year">2021</div>
+                <div class="opt-wrap">
+                  <div class="opt opt1">Coupe</div>
+                  <div class="opt opt2">Diesel</div>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="list li4 smli">
+            <div class="img-wrap">
+              <img src="../img/handy/handy4.webp" alt="차량이미지">
+            </div>
+            <div class="desc-wrap">
+              <div class="title">
+                <h4>Audi A8 4-door sedan silver</h4>
+                <div class="price">$70,000</div>
+              </div>
+              <div class="article">
+                <div class="year">2021</div>
+                <div class="opt-wrap">
+                  <div class="opt opt1">sedan</div>
+                  <div class="opt opt2">Diesel</div>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="list li5 smli">
+            <div class="img-wrap">
+              <img src="../img/handy/handy5.webp" alt="차량이미지">
+            </div>
+            <div class="desc-wrap">
+              <div class="title">
+                <h4>Mercedes-Benz S-class 2-door coupe silver</h4>
+                <div class="price">$76,000</div>
+              </div>
+              <div class="article">
+                <div class="year">2021</div>
+                <div class="opt-wrap">
+                  <div class="opt opt1">Coupe</div>
+                  <div class="opt opt2">Diesel</div>
+                </div>
+              </div>
+            </div>
+          </li>
+        </ul>
       </ul>
       <div class="bot-wrapper"></div>
     </div>
