handy - append로 붙여야함

--- a/html/index.html
+++ b/html/index.html
@@ -26,7 +26,7 @@
       </div>
       <h1 class="logo-wrapper">
         <div class="logo-wrap">
-          <a href="#"><img src="../img/logo-header-black.webp" alt="로고"></a>
+          <a href="#"><img class="logo" src="../img/logo-header-white.webp" alt="로고"></a>
         </div>
       </h1>
       <div class="mo-login">
@@ -157,11 +157,11 @@
       <ul class="list-wrapper">
         <li class="list li1">
           <div class="img-wrap">
-            <img src="../img/handy/handy1.webp" alt="차량이미지">
+            <img class="img" src="../img/handy/handy1.webp" alt="차량이미지">
           </div>
           <div class="desc-wrap">
             <div class="title">
-              <h4>BMW 8-serie 2-door coupe grey</h4>
+              <h4 class="title-wrap">BMW 8-serie 2-door coupe grey</h4>
             </div>
             <div class="article">
               <div class="year">2021</div>
@@ -177,11 +177,11 @@
         <ul class="list-wrap">
           <li class="list li2 smli">
             <div class="img-wrap">
-              <img src="../img/handy/handy2.webp" alt="차량이미지">
+              <img class="img" src="../img/handy/handy2.webp" alt="차량이미지">
             </div>
             <div class="desc-wrap">
               <div class="title">
-                <h4>Chevrolet Camaro 2-door convertible blue</h4>
+                <h4 class="title-wrap">Chevrolet Camaro 2-door convertible blue</h4>
                 <div class="price">$40,000</div>
               </div>
               <div class="article">
@@ -195,11 +195,11 @@
           </li>
           <li class="list li3 smli">
             <div class="img-wrap">
-              <img src="../img/handy/handy3.webp" alt="차량이미지">
+              <img class="img" src="../img/handy/handy3.webp" alt="차량이미지">
             </div>
             <div class="desc-wrap">
               <div class="title">
-                <h4>Ferrari LaFerrari 2-door coupe red</h4>
+                <h4 class="title-wrap">Ferrari LaFerrari 2-door coupe red</h4>
                 <div class="price">$810,000</div>
               </div>
               <div class="article">
@@ -213,11 +213,11 @@
           </li>
           <li class="list li4 smli">
             <div class="img-wrap">
-              <img src="../img/handy/handy4.webp" alt="차량이미지">
+              <img class="img" src="../img/handy/handy4.webp" alt="차량이미지">
             </div>
             <div class="desc-wrap">
               <div class="title">
-                <h4>Audi A8 4-door sedan silver</h4>
+                <h4 class="title-wrap">Audi A8 4-door sedan silver</h4>
                 <div class="price">$70,000</div>
               </div>
               <div class="article">
@@ -231,11 +231,11 @@
           </li>
           <li class="list li5 smli">
             <div class="img-wrap">
-              <img src="../img/handy/handy5.webp" alt="차량이미지">
+              <img class="img" src="../img/handy/handy5.webp" alt="차량이미지">
             </div>
             <div class="desc-wrap">
               <div class="title">
-                <h4>Mercedes-Benz S-class 2-door coupe silver</h4>
+                <h4 class="title-wrap">Mercedes-Benz S-class 2-door coupe silver</h4>
                 <div class="price">$76,000</div>
               </div>
               <div class="article">
@@ -249,7 +249,17 @@
           </li>
         </ul>
       </ul>
-      <div class="bot-wrapper"></div>
+      <div class="bot-wrapper">
+        <div class="sns-wrap">
+          <p>Follow us</p>
+          <a href="#"> <i class="fab fa-twitter"></i> </a>
+          <a href="#"> <i class="fab fa-facebook-f"></i> </a>
+          <a href="#"> <i class="fab fa-github"></i> </a>
+        </div>
+        <div class="bt-wrap">
+          <button class="bt-view">View 29 New</button>
+        </div>
+      </div>
     </div>
   </section>
   <script src="../js/index.js"></script>
