--- a/html/index.html
+++ b/html/index.html
@@ -262,6 +262,79 @@
       </div>
     </div>
   </section>
+  <section class="popular-wrapper">
+      <div class="wrapper">
+        <div class="title-wrapper">
+          <div class="title-wrap">
+            <h2 class="title">Popular Makes</h2>
+          </div>
+          <div class="bt-wrap">
+            <button class="bt-car bt-audi">Audi</button>
+            <button class="bt-car bt-bmw">BMW</button>
+            <button class="bt-car bt-benz">Mercedes-Benz</button>
+          </div>
+        </div>
+        <ul class="list-wrapper">
+          <li class="list">
+            <div class="img-wrap">
+              <img class="img" src="../img/handy/handy1.webp" alt="차량이미지">
+            </div>
+            <div class="desc-wrap">
+              <div class="title">
+                <h4 class="title-wrap">BMW 8-serie 2-door coupe grey</h4>
+              </div>
+              <div class="article">
+                <div class="year">2021</div>
+                <div class="opt-wrap">
+                  <div class="opt opt1">Automatic</div>
+                  <div class="opt opt2">petrol</div>
+                  <div class="opt opt3">Front Wheel Drive</div>
+                </div>
+                <div class="price">$62,000</div>
+              </div>
+            </div>
+          </li>
+          <li class="list">
+            <div class="img-wrap">
+              <img class="img" src="../img/handy/handy1.webp" alt="차량이미지">
+            </div>
+            <div class="desc-wrap">
+              <div class="title">
+                <h4 class="title-wrap">BMW 8-serie 2-door coupe grey</h4>
+              </div>
+              <div class="article">
+                <div class="year">2021</div>
+                <div class="opt-wrap">
+                  <div class="opt opt1">Automatic</div>
+                  <div class="opt opt2">petrol</div>
+                  <div class="opt opt3">Front Wheel Drive</div>
+                </div>
+                <div class="price">$62,000</div>
+              </div>
+            </div>
+          </li>
+          <li class="list">
+            <div class="img-wrap">
+              <img class="img" src="../img/handy/handy1.webp" alt="차량이미지">
+            </div>
+            <div class="desc-wrap">
+              <div class="title">
+                <h4 class="title-wrap">BMW 8-serie 2-door coupe grey</h4>
+              </div>
+              <div class="article">
+                <div class="year">2021</div>
+                <div class="opt-wrap">
+                  <div class="opt opt1">Automatic</div>
+                  <div class="opt opt2">petrol</div>
+                  <div class="opt opt3">Front Wheel Drive</div>
+                </div>
+                <div class="price">$62,000</div>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+  </section>
   <script src="../js/index.js"></script>
 </body>
 
