--- a/html/index.html
+++ b/html/index.html
@@ -172,79 +172,50 @@
       </div>
     </div>
   </section>
-  <!-- popular-wrapper -->
-  <section class="popular-wrapper">
-      <div class="wrapper">
-        <div class="title-wrapper">
-          <div class="title-wrap">
-            <h2 class="title">Popular Makes</h2>
-          </div>
-          <div class="bt-wrap">
-            <button class="bt-car bt-audi">Audi</button>
-            <button class="bt-car bt-bmw">BMW</button>
-            <button class="bt-car bt-benz">Mercedes-Benz</button>
-          </div>
-        </div>
-        <ul class="list-wrapper">
-          <li class="list">
-            <div class="img-wrap">
-              <img class="img" src="../img/handy/handy1.webp" alt="차량이미지">
+  <!-- why-wrapper -->
+  <section class="why-wrapper">
+    <div class="wrapper">
+      <div class="why-head">
+        <h3 class="why-title">Why choose us?</h3>
+      </div>
+      <div class="why-body">
+        <ul class="whylist-wrapper">
+          <li class="whylist">
+            <div class="icon-wrap">
+              <i class="bi-award-fill"></i>
+            </div>
+            <div class="title">
+              <h5>Wide range of brands</h5>
             </div>
             <div class="desc-wrap">
-              <div class="title">
-                <h4 class="title-wrap">BMW 8-serie 2-door coupe grey</h4>
-              </div>
-              <div class="article">
-                <div class="year">2021</div>
-                <div class="opt-wrap">
-                  <div class="opt opt1">Automatic</div>
-                  <div class="opt opt2">petrol</div>
-                  <div class="opt opt3">Front Wheel Drive</div>
-                </div>
-                <div class="price">$62,000</div>
-              </div>
+              <p>We can help with your financing plan, we can offer some tips and tricks. Drive off with this dream car of yours regardless of your credit history.</p>
             </div>
           </li>
-          <li class="list">
-            <div class="img-wrap">
-              <img class="img" src="../img/handy/handy1.webp" alt="차량이미지">
+          <li class="whylist">
+            <div class="icon-wrap">
+              <i class="fa fa-handshake"></i>
+            </div>
+            <div class="title">
+              <h5>Trusted by our clients</h5>
             </div>
             <div class="desc-wrap">
-              <div class="title">
-                <h4 class="title-wrap">BMW 8-serie 2-door coupe grey</h4>
-              </div>
-              <div class="article">
-                <div class="year">2021</div>
-                <div class="opt-wrap">
-                  <div class="opt opt1">Automatic</div>
-                  <div class="opt opt2">petrol</div>
-                  <div class="opt opt3">Front Wheel Drive</div>
-                </div>
-                <div class="price">$62,000</div>
-              </div>
+              <p>We can help with your financing plan, we can offer some tips and tricks. Drive off with this dream car of yours regardless of your credit history.</p>
             </div>
           </li>
-          <li class="list">
-            <div class="img-wrap">
-              <img class="img" src="../img/handy/handy1.webp" alt="차량이미지">
+          <li class="whylist">
+            <div class="icon-wrap">
+              <i class="fa fa-money-bill"></i>
+            </div>
+            <div class="title">
+              <h5>Fast & easy financing</h5>
             </div>
             <div class="desc-wrap">
-              <div class="title">
-                <h4 class="title-wrap">BMW 8-serie 2-door coupe grey</h4>
-              </div>
-              <div class="article">
-                <div class="year">2021</div>
-                <div class="opt-wrap">
-                  <div class="opt opt1">Automatic</div>
-                  <div class="opt opt2">petrol</div>
-                  <div class="opt opt3">Front Wheel Drive</div>
-                </div>
-                <div class="price">$62,000</div>
-              </div>
+              <p>We can help with your financing plan, we can offer some tips and tricks. Drive off with this dream car of yours regardless of your credit history.</p>
             </div>
           </li>
         </ul>
       </div>
+    </div>
   </section>
   <script src="../js/index.js"></script>
 </body>
