team-wrapper 기본 완성

--- a/html/index.html
+++ b/html/index.html
@@ -217,6 +217,35 @@
       </div>
     </div>
   </section>
+  <!-- team-wrapper -->
+  <section class="team-wrapper">
+    <div class="wrapper bg-dark">
+      <div class="info-wrapper">
+        <h6 class="title">Our team</h6>
+        <ul class="info-wrap">
+          <li class="info"> <i class="fa fa-check-circle"></i> Praesent nibh luctus viverra</li>
+          <li class="info"> <i class="fa fa-check-circle"></i> Adipiscing elit</li>
+          <li class="info"> <i class="fa fa-check-circle"></i> Tempor incididunt ut labore</li>
+          <li class="info"> <i class="fa fa-check-circle"></i> Quis ipsum suspendisseviverra</li>
+          <li class="info"> <i class="fa fa-check-circle"></i> Maecenas ac</li>
+          <button class="btn btn-info">Learn More</button>
+        </ul>
+      </div>
+      <div class="swiper-container">
+        <ul class="swiper-wrapper">
+          <li class="swiper-slide">
+            <div class="img-wrap">
+              <img src="../img/team/emily.jpg" alt="사진">
+            </div>
+            <div class="bt-wrap">
+              <div class="call"> <i class="bi-telephone-fill"></i> </div>
+              <div class="msg"> <i class="bi-envelope-fill"></i> </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
   <script src="../js/index.js"></script>
 </body>
 
