team-wrapper 완성

--- a/html/index.html
+++ b/html/index.html
@@ -219,7 +219,7 @@
   </section>
   <!-- team-wrapper -->
   <section class="team-wrapper">
-    <div class="wrapper bg-dark">
+    <div class="team-wrap wrapper">
       <div class="info-wrapper">
         <h6 class="title">Our team</h6>
         <ul class="info-wrap">
@@ -231,17 +231,29 @@
           <button class="btn btn-info">Learn More</button>
         </ul>
       </div>
-      <div class="swiper-container">
-        <ul class="swiper-wrapper">
-          <li class="swiper-slide">
-            <div class="img-wrap">
-              <img src="../img/team/emily.jpg" alt="사진">
-            </div>
-            <div class="bt-wrap">
-              <div class="call"> <i class="bi-telephone-fill"></i> </div>
-              <div class="msg"> <i class="bi-envelope-fill"></i> </div>
-            </div>
-          </li>
+      <div class="slide-stage">
+        <ul class="swiper-container slide-runner">
+          <div class="swiper-wrapper slide-case">
+            <!-- <li class="swiper-slide slide">
+              <div class="img-wrap">
+                <img src="../img/team/emily.jpg" alt="사진">
+              </div>
+              <div class="bt-wrap">
+                <a class="call" href="tel:(123) 345-6789"> <i class="bi-telephone-fill"></i> </a>
+                <a class="msg" href="mailto:emily@vehica.com"> <i class="bi-envelope-fill"></i> </a>
+              </div>
+              <div class="person-info">
+                <div class="info-head">
+                  <h6 class="name">Emily Rees</h6>
+                  <p class="job">Customer Advisor</p>
+                </div>
+                <div class="info-body">
+                  <a href="mailto:emily@vehica.com">emily@vehica.com</a>
+                  <a href="tel:(123) 345-6789">(123) 345-6789</a>
+                </div>
+              </div>
+            </li> -->
+          </div>
         </ul>
       </div>
     </div>
