--- a/html/index.html
+++ b/html/index.html
@@ -157,7 +157,7 @@
         </div>
       </div>
       <ul class="list-wrapper">
-
+        <!-- import list -->
       </ul>
       <div class="bot-wrapper">
         <div class="sns-wrap">
@@ -234,31 +234,46 @@
       <div class="slide-stage">
         <ul class="swiper-container slide-runner">
           <div class="swiper-wrapper slide-case">
-            <!-- <li class="swiper-slide slide">
-              <div class="img-wrap">
-                <img src="../img/team/emily.jpg" alt="사진">
-              </div>
-              <div class="bt-wrap">
-                <a class="call" href="tel:(123) 345-6789"> <i class="bi-telephone-fill"></i> </a>
-                <a class="msg" href="mailto:emily@vehica.com"> <i class="bi-envelope-fill"></i> </a>
-              </div>
-              <div class="person-info">
-                <div class="info-head">
-                  <h6 class="name">Emily Rees</h6>
-                  <p class="job">Customer Advisor</p>
-                </div>
-                <div class="info-body">
-                  <a href="mailto:emily@vehica.com">emily@vehica.com</a>
-                  <a href="tel:(123) 345-6789">(123) 345-6789</a>
-                </div>
-              </div>
-            </li> -->
+            <!-- import slide -->
           </div>
         </ul>
       </div>
     </div>
   </section>
+  <!-- app-wrapper -->
+  <section class="app-wrapper">
+    <div class="swiper-container bar-wrapper wrapper">
+      <ul class="swiper-wrapper spon-wrapper">
+        <li class="swiper-slide spon"><img src="../img/app/audiojungle.webp" alt="스폰서"></li>
+        <li class="swiper-slide spon"><img src="../img/app/codecanyon.webp" alt="스폰서"></li>
+        <li class="swiper-slide spon"><img src="../img/app/graphicriver.webp" alt="스폰서"></li>
+        <li class="swiper-slide spon"><img src="../img/app/photodune.webp" alt="스폰서"></li>
+        <li class="swiper-slide spon"><img src="../img/app/themeforest.webp" alt="스폰서"></li>
+      </ul>
+    </div>
+    <div class="down-wrapper wrapper">
+
+      <div class="app-wrap">
+        <div class="cont-box">
+              <h6 class="title">Download <br> our app</h6>
+          <div class="bt-wrap">
+            <button class="bt-cont bt-ios"><i class="fa fa-apple"></i> For Ios</button>
+            <button class="bt-cont bt-and"><i class="fa fa-android"></i> For Android</button>
+          </div>
+        </div>
+        <div class="cont-box2">
+          <div class="img-wrap">
+            <img src="../img/app/phone.webp" alt="app">
+          </div>
+        </div>
+      </div>
+
+      <div class="how-wrap">
+
+      </div>
+
+    </div>
+  </section>
   <script src="../js/index.js"></script>
 </body>
-
 </html>
