app-wrapper 구조 완성

--- a/html/index.html
+++ b/html/index.html
@@ -252,13 +252,12 @@
       </ul>
     </div>
     <div class="down-wrapper wrapper">
-
       <div class="app-wrap">
         <div class="cont-box">
-              <h6 class="title">Download <br> our app</h6>
+              <h6 class="title">Download our app</h6>
           <div class="bt-wrap">
-            <button class="bt-cont bt-ios"><i class="fa fa-apple"></i> For Ios</button>
-            <button class="bt-cont bt-and"><i class="fa fa-android"></i> For Android</button>
+            <button class="bt-cont bt-ios"><i class="fa fa-apple"></i>For Ios</button>
+            <button class="bt-cont bt-and"><i class="fa fa-android"></i>For Android</button>
           </div>
         </div>
         <div class="cont-box2">
@@ -267,13 +266,31 @@
           </div>
         </div>
       </div>
-
       <div class="how-wrap">
-
+        <div class="cont-box">
+          <h6 class="title">How to buy a car?</h6>
+          <button class="bt-cont bt-ios">Read More</button>
+        </div>
+        <div class="cont-box2">
+          <ul class="buy-list">
+            <li class="list"><i class="fa fa-check-circle"></i> best deals</li>
+            <li class="list"><i class="fa fa-check-circle"></i> sell your car</li>
+            <li class="list"><i class="fa fa-check-circle"></i> car book values</li>
+            <li class="list"><i class="fa fa-check-circle"></i> car dealers</li>
+            <li class="list"><i class="fa fa-check-circle"></i> compare prices</li>
+          </ul>
+        </div>
       </div>
-
     </div>
   </section>
+  <!-- news-wrapper -->
+  <section>
+    
+  </section>
+  <!-- footer-wrapper -->
+  <footer class="footer-wrapper">
+
+  </footer>
   <script src="../js/index.js"></script>
 </body>
 </html>
