news-wrapper 완성

--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +16,6 @@
   <script src="../js/swiper-bundle.min.js"></script>
   <script src="../js/util.js"></script>
 </head>
-
 <body>
   <header class="header-wrapper">
     <div class="front-header">
@@ -284,12 +282,25 @@
     </div>
   </section>
   <!-- news-wrapper -->
-  <section>
-    
+  <section class="news-wrapper">
+    <ul class="cont-wrapper wrapper">
+      <li class="content">
+        <h5 class="title">Newsletter</h5>
+      </li>
+      <li class="content">
+        <form class="email-form">
+          <input type="text" placeholder="Your email address">
+          <button class="bt-cont"> Sign-Up</button>
+        </form>
+      </li>
+      <li class="content">
+        <p>Subscribe to our newsletter and stay updated with our offer</p>
+      </li>
+    </ul>
   </section>
   <!-- footer-wrapper -->
   <footer class="footer-wrapper">
-
+    
   </footer>
   <script src="../js/index.js"></script>
 </body>
