footer 구조 완성 / 반응형 하기 전

--- a/html/index.html
+++ b/html/index.html
@@ -299,8 +299,43 @@
     </ul>
   </section>
   <!-- footer-wrapper -->
-  <footer class="footer-wrapper">
-    
+  <footer class="footer-wrapper bg-dark">
+    <div class="wrapper">
+      <ul class="cont-wrap">
+        <li class="content">
+          <h1 class="logo">
+            <img src="../img/logo-header-white.webp" alt="로고">
+          </h1>
+        </li>
+        <li class="content">
+          <ul class="footer-list">
+            <li class="list"> <i class="fa fa-circle"></i>Listings</li>
+            <li class="list"> <i class="fa fa-circle"></i>FAQ</li>
+            <li class="list"> <i class="fa fa-circle"></i>About us</li>
+          </ul>
+        </li>
+        <li class="content">
+          <ul class="footer-list">
+            <li class="list"><i class="fa fa-circle"></i>Blog</li>
+            <li class="list"><i class="fa fa-circle"></i>Our team</li>
+            <li class="list"><i class="fa fa-circle"></i>Contact</li>
+          </ul>
+        </li>
+        <li class="content">
+          <p>Award-winning, family owned dealership of new and pre-owned vehicles with several locations across the city. Lowest prices and the best customer service guaranteed.</p>
+        </li>
+        <li class="content">
+          <ul class="contact-wrap">
+            <li class="cont"><a href="tel:(123) 456-78901"><span>(123)</span> 456-78901</a></li>
+            <li class="cont"><a href="mailto:support@vehica.com">support@vehica.com</a></li>
+            <li class="cont">West 12th Street <br> New York, NY, USA</li>
+          </ul>
+        </li>
+      </ul>
+      <div class="footer-bot">
+        <p>Copyright © 2021. All rights reserved.</p>
+      </div>
+    </div>
   </footer>
   <script src="../js/index.js"></script>
 </body>
