구조/디자인 완성 - 반응형 전

--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,7 @@
   <script src="../js/util.js"></script>
 </head>
 <body>
+  <!-- header-wrapper -->
   <header class="header-wrapper">
     <div class="front-header">
       <div class="mo-menu">
@@ -155,9 +156,13 @@
         </div>
       </div>
       <ul class="list-wrapper">
-        <li class="list li1"></li>
+        <li class="list li1">
+          <!-- slide-import -->
+        </li>
         <li class="list-subwrap">
-          <ul class="list-wrap"></ul>
+          <ul class="list-wrap">
+            <!-- slide-import -->
+          </ul>
         </li>
       </ul>
       <div class="bot-wrapper">
@@ -251,6 +256,8 @@
         <li class="swiper-slide spon"><img src="../img/app/photodune.webp" alt="스폰서"></li>
         <li class="swiper-slide spon"><img src="../img/app/themeforest.webp" alt="스폰서"></li>
       </ul>
+        <button class="bt bt-prev"></button>
+        <button class="bt bt-next"></button>
     </div>
     <div class="down-wrapper wrapper">
       <div class="app-wrap">
